--- a/OnlineStoreManagementSystem/OnlineStoreManagementSystem.csproj
+++ b/OnlineStoreManagementSystem/OnlineStoreManagementSystem.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToolBox\ToolBox.csproj" />
+  </ItemGroup>
+
 </Project>
