--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OnlineStoreManagementSystem\OnlineStoreManagementSystem.csproj" />
     <ProjectReference Include="..\ToolBox\ToolBox.csproj" />
   </ItemGroup>
 
